<resources>
    <string name="app_name">NEU_Spring_CS5520_Group18</string>
    <string name="enter_the_name_of_city">Enter the Name of City</string>
    <string name="temp">temp</string>
    <string name="search_btn">Search Button</string>
    <string name="city_name_displayed">City Name</string>
    <string name="date_time_displayed"><![CDATA[Date & Time]]></string>
    <string name="temperature_displayed">- °C</string>
    <string name="weather_condition_displayed">Condition</string>
    <string name="weather_image_displayed">Weather Image</string>
    <string name="group_18">Group 18</string>
    <string name="shichang_ye">Shichang Ye</string>
    <string name="manping_zhao">Manping Zhao</string>
    <string name="chen_chen">Chen Chen</string>
    <string name="lin_han">Lin Han</string>
    <string name="at_your_service">At Your Service</string>
    <string name="firebase_database">Stick It to \'Em</string>
    <string name="about">About</string>
    <string name="channel_name">group_18_stick_it_to_em_channel_name</string>
    <string name="channel_description">group_18_stick_it_to_em_channel_description</string>
    <string name="channel_id">group_18_stick_it_to_em_channel_id</string>
</resources>